--- a/.github/workflows/xmllint.yml
+++ b/.github/workflows/xmllint.yml
@@ -21,7 +21,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
       - name: Install packages
         run: |
