Add workflow_dispatch to jobs.

--- a/.github/workflows/xmllint.yml
+++ b/.github/workflows/xmllint.yml
@@ -17,6 +17,8 @@ on:
       - 'Desktops/*/*.xml'
       - '.github/workflows/xmllint.yml'
 
+  workflow_dispatch:
+
 jobs:
   lint:
     name: Run xml linter
