--- a/.github/workflows/xmllint.yml
+++ b/.github/workflows/xmllint.yml
@@ -26,7 +26,7 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@main
 
       - name: Install packages
         run: |
