--- a/.github/workflows/xmllint.yml
+++ b/.github/workflows/xmllint.yml
@@ -33,6 +33,7 @@ jobs:
 
       - name: Install packages
         run: |
+          sudo apt update
           sudo apt install libxml2-utils 
 
       - name: Run xmllint
